testsuite/tests/parser/should_fail/Or1.hs
module Main where

main = case 1 of
  (2 ; 3) -> True
