testsuite/tests/parser/should_fail/Or1.stderr
Or1.hs:4:4: error: [GHC-29847]
    Illegal or-pattern: 2; 3
    Suggested fix:
      Perhaps you intended to use the ‘OrPatterns’ extension

